# openai_sdk_resume_assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  LICENSE  README.md  compose.yaml  docker-compose.dev.yaml  docker-compose.test.yaml  pyproject.toml  start-dev.bat
backend/: pyproject.toml
backend/app/: main.py
backend/docker/: Dockerfile  compose.yaml
backend/src/app/: main.py
backend/src/app/api/endpoints/: chat.py
backend/src/app/api/v1/: router.py
backend/src/app/services/: chat_service.py
docs/: ARCHITECTURE.mmd  REQUEST_FLOW.mmd  Readme.md
docs/routes/: chat_list_flow.mmd  chat_stream_flow.mmd  create_chat_memory.mmd  request_flow_startup.mmd  upload_file_flow.mmd
src/openai_sdk_resume_assistant/: __init__.py  agent_tools.py  base_agent.py  client.py  definitions.py  from_base_agent_lab.ipynb  initial_mcp_lab.ipynb  lab3.py  mcp_agent.ipynb  mcp_agent_lab.ipynb  mcp_params.py  research_agent.py  resume_agent.py  test_lab.ipynb  tool_agent.py
src/openai_sdk_resume_assistant/RAG/: rag_agent.py  vector_db.py
src/openai_sdk_resume_assistant/RAG/resume_vectorstore/: chroma.sqlite3
src/openai_sdk_resume_assistant/RAG/sample_vectorstore/: chroma.sqlite3
src/openai_sdk_resume_assistant/backend/: README.md
src/openai_sdk_resume_assistant/backend/app/: main.py  mongodb.py  users.py
src/openai_sdk_resume_assistant/backend/app/api/: chat.py  mongodb.py
src/openai_sdk_resume_assistant/backend/app/api/endpoints/: chat.py
src/openai_sdk_resume_assistant/backend/app/models/: chat_schemas.py
src/openai_sdk_resume_assistant/backend/app/services/: chat_service.py  data_access_layer.py
src/openai_sdk_resume_assistant/data/: more_ilyan.txt  sample.txt
src/openai_sdk_resume_assistant/file_storage/: Anthropic_update.md  anthropic.md  anthropic2.md  pink_pasta.md  shepards_pie.md
src/openai_sdk_resume_assistant/file_storage/news/: AI_latest_news.md
src/openai_sdk_resume_assistant/lab/: 2025-10-19_langc_text_split_lab.ipynb  lab3.py
src/openai_sdk_resume_assistant/mcp_servers/: rag_agent_server.py  send_email_server.py
src/openai_sdk_resume_assistant/memory/: ed2.db  ilyan.db
src/openai_sdk_resume_assistant/notebooks/: from_base_agent_lab.ipynb  mcp_agent_lab.ipynb
src/openai_sdk_resume_assistant/react-frontend/: index.html  package-lock.json  package.json
src/openai_sdk_resume_assistant/react-frontend/src/: App.css  App.jsx  main.jsx
src/openai_sdk_resume_assistant/react-frontend/src/components/: AuthProvider.jsx  ChatBubble.jsx  ChatInput.jsx  ChatMessages.jsx  ChatWindow.jsx  Header.jsx  ProtectedRoute.jsx  StatusMessage.jsx
src/openai_sdk_resume_assistant/react-frontend/src/hooks/: useAuth.js  useChat.js  useFileUpload.js  useListCollectionItems.js
src/openai_sdk_resume_assistant/react-frontend/src/layout/: Layout.jsx
src/openai_sdk_resume_assistant/react-frontend/src/pages/: AuthPage.jsx  ChatListPage.jsx  ChatPage.jsx  UploadPage.jsx
src/openai_sdk_resume_assistant/react-frontend/src/services/: api.js  apiClient.js  authApi.js
src/openai_sdk_resume_assistant/react-frontend/src/styles/: ChatListPage.css  ChatPage.css  Header.css  UploadPage.css  chat.css
