[project]
name = "openai-sdk-resume-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nazer, Mohamed Ilyan", email = "mohamed.ilyan+Boskalis@boskalis.com" }
]
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.23.1",
    "dotenv>=0.9.9",
    "fastmcp>=2.10.5",
    "gradio>=5.37.0",
    "loguru>=0.7.3",
    "mcp-server-fetch>=2025.1.17",
    "notebook>=7.4.5",
    "openai>=1.96.1",
    "openai-agents>=0.2.0",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "sendgrid>=6.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]
