[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nazer, Mohamed Ilyan", email = "ilyan146@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "uvicorn>=0.38.0",
    "openai-sdk-resume-assistant"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv.sources]
openai-sdk-resume-assistant = { workspace = true }
